# OOP2

./: README.md
v1.0/include/: Mylib.h  Stud.h  Studentas.h
v1.0/src/: Stud.cpp  Studentai.cpp  Studentas.cpp
v2.0/: CMakeLists.txt
v2.0/docs/html/: _mylib_8h.html  _mylib_8h_source.html  _stud_8cpp.html  _stud_8cpp.js  _stud_8h.html  _stud_8h.js  _stud_8h_source.html  _studentai_8cpp.html  _studentai_8cpp.js  _studentas_8cpp.html  _studentas_8cpp.js  _studentas_8h.html  _studentas_8h_source.html  _zmogus_8h.html  _zmogus_8h_source.html  annotated.html  class_studentas-members.html  class_studentas.html  class_studentas.js  class_timer.html  class_zmogus-members.html  class_zmogus.html  class_zmogus.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  menudata.js  navtreedata.js  navtreeindex0.js  timer_8h.html  timer_8h_source.html
v2.0/docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  files_1.js  functions_2.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  searchdata.js
v2.0/include/: Stud.h  Studentas.h  Zmogus.h  timer.h
v2.0/src/: Stud.cpp  Studentai.cpp
v2.0/tests/: test_Studentas.cpp
